--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,22 @@
 <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
 <thead>
   <tr>
-    <th>ID</th>
-    <th>First name</th>
-    <th>Last name</th>
+    <th>id</th>
+    <th>email</th>
+    <th>name</th>
+    <th>phone</th>
+    <th>username</th>
+    <th>website</th>
   </tr>
 </thead>
 <tbody>
   <tr *ngFor="let person of persons">
     <td>{{ person.id }}</td>
-    <td>{{ person.firstName }}</td>
-    <td>{{ person.lastName }}</td>
+    <td>{{ person.email }}</td>
+    <td>{{ person.name }}</td>
+    <td>{{ person.phone }}</td>
+    <td>{{ person.username }}</td>
+    <td>{{ person.website }}</td>
   </tr>
 </tbody>
 </table>
